Some changes maybe, plus igoring .htaccess and Thumbs.db files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
       <!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-      <div><img src='../media/RMIT-Logo.png' alt='RMIT University logo' height=80 />Insert Your Name Here
+      <div><img src='../media/RMIT-Logo.png' alt='RMIT University logo' height=80 />Jasmine Xu
       </div>
     </header>
 
@@ -38,38 +38,38 @@
       <article id='about-me'>
         <h2>About me</h2>
         <p>
-          <img src='../media/avatar.png' width='200' alt='my photo' />
+          <img src='../media/pic.jpeg' width='200' alt='my photo' />
         </p>
         <details open>
           <summary>read more ...</summary>
             <table id="more-about-me">
               <tr>
                 <th>Have you any programming or web design experience?</th>
-                <td>_</td>
+                <td>Completely new to this.</td>
               </tr>
               <tr>
                 <th>Do you see yourself as a programmer or designer, or both?</th>
-                <td>_</td>
+                <td>Whatever makes more money in the future.</td>
               </tr>
               <tr>
                 <th>What has brought you to this course at RMIT?</th>
-                <td>_</td>
+                <td>Google course search.</td>
               </tr>
               <tr>
                 <th>What are you hoping to get out of the course?</th>
-                <td>_</td>
+                <td>A job.</td>
               </tr>
               <tr>
                 <th>Assignments allow for individual or paried work. What strengths do you have and what strengths would you like your assignment partner to have?</th>
-                <td>_</td>
+                <td>Umm we will see, I don't know.</td>
               </tr>
               <tr>
                 <th>What websites do you use the most? (NB: "family friendly" !)</th>
-                <td>_</td>
+                <td>Google. </td>
               </tr>
               <tr>
                 <th>Do you have any interests or hobbies?</th>
-                <td>_</td>
+                <td>None. Not interested in anything. Boring af.</td>
               </tr>
             </table>
         </details>
@@ -80,7 +80,7 @@
     </main>
 
     <footer>
-      &copy; Insert your name here
+      &copy; Jasmine Xu
       <script>
         document.write(new Date().getFullYear());
       </script>.
